--- a/src/style.css
+++ b/src/style.css
@@ -5,39 +5,76 @@ h1 {
   font-family: monospace;
   
 }
+
+figure {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: auto;
+    margin-bottom: auto;
+  
+    
+}
+
 h2 {
     text-align: center;
     color: white;
     font-size: 30px;
     font-family: monospace;
 }
+
 h3 {
     text-align: center;
     color: white;
     font-size: 25px;
     font-family: monospace;
 }
-button {
-    background-color: teal;
-    padding: 10px;
-    color: white;
-    font-size: 20px;
-    font-family: monospace;
 
+button {
+    background-color:rgb(221, 154, 76);
+    padding: 12px;
+    border-radius: 12px;
+    color: black;
+    font-size: 20px;
+    font-family:monospace;
+    font-weight: bolder;
 }
-body {
+
+.buttons {
+    margin-left: 230px;
+    margin-right: 230px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     
+}
+
+.btnA {
+    display: flex;
+    justify-content: center;
+    
+}
+
+.btnB {
+   display:flex;
+   justify-content: center;
+ 
+}
+
+body {
     background-position: inherit;
     background-repeat: no-repeat;
     background-size:cover;  
     background-image: url(img/fondo_hacker.jpeg);
-    
 }
-#content {
+
+#container {
     border: 5px none white;
     margin: 4em 8em;
     padding: 2em 8em 4em;
     background-color: black;
     opacity: .8;
+
 }
+
 
