--- a/src/style.css
+++ b/src/style.css
@@ -7,14 +7,9 @@
     font-family: monospace;
 }
 
-input, button {
-    border:none;
-    outline: none;
-}
 
 main {
     padding: 25px;
-    box-shadow: 8px 8px 35px 0px rgb(0, 0, 0/75%);
     border-radius: var(--round-border);
 }
 
@@ -28,9 +23,9 @@ h1 {
 
 #inputText, #outputText {
     background-color: var(--terminal-color);
-    width: -webkit-fill-available;
+    width: 400px;
     font-size: 15px;
-
+    
 }
 
 #inputText {
@@ -41,15 +36,23 @@ h1 {
     border-radius: var(--round-border);
 }
 
-/*Resultado mensaje encriptado*/
-
 #outputText {
     height: 100px;
     color:#5af78d;
-    padding: 0px 10px 10px;
-    margin-top: 10px;
+    padding: 10px;
     border-radius: var(--round-border);
 
+}
+
+#stepOne {
+    display: flex;
+    justify-content: center;
+}
+
+#result {
+    margin: 2em 0em;
+    display: flex;
+    justify-content: center;
 }
 
 #rank {
@@ -91,7 +94,9 @@ h3 {
 }
 
 p {
-    font-size: 15px;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
 }
 
 button {
@@ -129,7 +134,7 @@ button {
 body {
     margin: 0px;
     height: 100vh;
-    background-color: #5c4b7a;
+    background-color:rgb(92, 75, 122, .8);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -137,12 +142,18 @@ body {
 }
 
 #container {
-    border: 5px none white;
-    margin: 4em 8em;
+    border-radius: 20px;
+    margin: 2em 8em;
     padding: 2em 8em 4em;
-    background-color:#5c4b7a;
-    opacity: .9;
+    background-color: rgb(92, 75, 122, .8);
+}
 
+#containerPage2 {
+    border-radius: 20px;
+    margin: 8em 7em 2em;
+    padding: 1em 8em 2em;
+    background-color: rgb(92, 75, 122, .8);
+    
 }
 
 #cipherBtn {
@@ -155,6 +166,13 @@ body {
 #page1 {
     height: 100vh;
     width:100vw;
-    background-image: url(img/fondo_hacker.jpeg);
-    
+    background-image: url(img/fondo_pascualina.jpg);
+}
+
+#page2 {
+    width: 100vw;
+    background-image: url(img/fondo_pascualina.jpg);
+}
+#allStep{
+    padding: 0px;
 }
