--- a/src/style.css
+++ b/src/style.css
@@ -95,10 +95,24 @@ h3 {
     font-family: monospace;
 }
 
+h4 {
+    text-align: left;
+    color: white;
+    font-size: 25px;
+    font-family: monospace;
+}
+
+h5 {
+    text-align: left;
+    color: white;
+    font-size: 25px;
+    font-family: monospace;
+}
+
 p {
     font-size: 18px;
     display: flex;
-    justify-content: center;
+    justify-content: left;
 }
 
 button {
@@ -130,8 +144,14 @@ button {
 .btnB {
    display:flex;
    justify-content: center;
- 
+
 }
+
+.btnI{
+    display:flex;
+    justify-content: center;
+}
+
 
 body {
     margin: 0px;
