--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,6 @@
     font-family: monospace;
 }
 
-
 main {
     padding: 25px;
     border-radius: var(--round-border);
@@ -41,6 +40,7 @@ h1 {
     height: 100px;
     width: 500px;
     color:#5af78d;
+    margin: 10px 0 0;
     padding: 10px;
     border-radius: var(--round-border);
 
@@ -95,14 +95,7 @@ h3 {
     font-family: monospace;
 }
 
-h4 {
-    text-align: left;
-    color: white;
-    font-size: 25px;
-    font-family: monospace;
-}
-
-h5 {
+h4, h5, h6 {
     text-align: left;
     color: white;
     font-size: 25px;
@@ -110,9 +103,9 @@ h5 {
 }
 
 p {
-    font-size: 18px;
+    font-size: 20px;
     display: flex;
-    justify-content: left;
+    justify-content: center;
 }
 
 button {
@@ -148,6 +141,7 @@ button {
 }
 
 .btnI{
+    margin-top: 70px;
     display:flex;
     justify-content: center;
 }
@@ -172,7 +166,7 @@ body {
 
 #containerPage2 {
     border-radius: 20px;
-    margin: 8em 7em 2em;
+    margin: 53em 7em 2em;
     padding: 1em 8em 2em;
     background-color: rgb(92, 75, 122, .8);
     
@@ -186,19 +180,22 @@ body {
 }
 
 #page1 {
-    height: 100vh;
-    width:100vw;
+    width: 100vw;
+    background-size: cover;
+    background-position: center;
     background-image: url(img/fondo_pascualina.jpg);
 }
 
 #page2 {
-    width: 100vw;
+    background-size: cover;
+    background-position: center;
     background-image: url(img/fondo_pascualina.jpg);
-}
-#allStep{
-    padding: 0px;
 }
 
 textarea {
     resize: none;
+}
+.socialNetwork {
+   display: flex;
+   justify-content: space-evenly;
 }
