--- a/src/style.css
+++ b/src/style.css
@@ -68,7 +68,8 @@ h1 {
     color: white;
     height: 30px;
     width: 50px;
-    
+    text-align: center;
+    font-size: 20px;
 }
 
 figure {
@@ -114,26 +115,10 @@ button {
     font-weight: bolder;
 }
 
-.btnPageOne {
-    margin-left: 230px;
-    margin-right: 230px;
-    margin: 0px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    
-}
-
-.btnA {
+.btnA, .btnB, .clearBtn {
     display: flex;
     justify-content: center;
     
-}
-
-.btnB {
-   display:flex;
-   justify-content: center;
-
 }
 
 .btnI{
@@ -146,7 +131,7 @@ button {
 body {
     margin: 0px;
     height: 100vh;
-    background-color:rgb(92, 75, 122, .8);
+    background-color:rgb(136,57,138, .8);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -155,7 +140,7 @@ body {
 
 #container {
     border-radius: 20px;
-    margin: 2em 5em 5em;
+    margin: 27px;
     padding: 2em 8em 2em;
     background-color: rgb(92, 75, 122, .8);
 }
@@ -165,26 +150,16 @@ body {
     margin: 53em 7em 2em;
     padding: 1em 8em 2em;
     background-color: rgb(92, 75, 122, .8);
-    
+   
 }
 
 #cipherBtn {
-    margin: 0px;
+    margin: 20px;
     display: flex;
     justify-content: space-evenly;
-    
 }
 
-#page1 {
-    height: 100vh;
-    width: 100vw;
-    background-size: cover;
-    background-position: center;
-    background-image: url(img/fondo_pascualina.jpg);
-}
-
-#page2 {
-    background-size: cover;
+#page1, #page2 {
     background-position: center;
     background-image: url(img/fondo_pascualina.jpg);
 }
@@ -192,6 +167,7 @@ body {
 textarea {
     resize: none;
 }
+
 .socialNetwork {
    display: flex;
    justify-content: space-evenly;
