--- a/src/style.css
+++ b/src/style.css
@@ -93,7 +93,7 @@ h2 {
 }
 
 h3, h4, h5 {
-    text-align: left;
+    text-align: justify;
     color: white;
     font-size: 25px;
     font-family: monospace;
@@ -147,10 +147,9 @@ body {
 
 #containerPage2 {
     border-radius: 20px;
-    margin: 53em 7em 2em;
+    margin: 58em 7em 2em;
     padding: 1em 8em 2em;
     background-color: rgb(92, 75, 122, .8);
-   
 }
 
 #cipherBtn {
@@ -169,6 +168,10 @@ textarea {
 }
 
 .socialNetwork {
-   display: flex;
-   justify-content: space-evenly;
+display: flex;
+justify-content: space-evenly;
+}
+
+p {
+    text-align: center;
 }
